# relationships

./: .env.example  .gitignore  README.md  overrides.example.yaml  pyproject.toml  setup.sh
docs/superpowers/plans/: 2026-07-12-imessage-analytics.md  2026-07-13-games-tab.md
docs/superpowers/specs/: 2026-07-12-imessage-analytics-design.md  2026-07-13-friend-release-design.md  2026-07-13-games-tab-design.md  imessage_semantic_niche_analysis_plan.md
ingest/: __main__.py  apple_epoch.py  chatdb.py  contacts.py  derive.py  handles.py  load.py  phrases.py  textstats.py  typedstream.py
scripts/: language.py  make_demo.py  semantic.py
server/: __main__.py  app.py  db.py  llm.py  stopwords.py
server/routes/: games.py  groups.py  language.py  overview.py  persons.py  you.py
tests/: conftest.py  fixtures.py  test_api_games.py  test_api_groups.py  test_api_language.py  test_api_overview.py  test_api_persons.py  test_api_you.py  test_apple_epoch.py  test_chatdb.py  test_contacts.py  test_derive.py  test_handles.py  test_ingest_e2e.py  test_load.py  test_people_clusters.py  test_phrases.py  test_textstats.py  test_typedstream.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css
web/src/components/: ArcsChart.test.ts  ArcsChart.tsx  BlobField.tsx  BucketPicker.tsx  CalendarHeatmap.tsx  Dropdown.tsx  FilterPanel.tsx  GroupTimeSeries.tsx  Heatmap.tsx  HotDays.tsx  Leaderboard.tsx  PeopleMap3D.tsx  SessionMap.tsx  Spine.tsx  StatGrid.tsx  TimeSeries.tsx  YouHotDays.tsx
web/src/lib/: format.test.ts  format.ts  useFetch.ts
(+10 files in other folders)
