[project]
name = "relationships"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "emoji>=2.12",
    "pyyaml>=6.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
